<resources>
  <string name="app_name">My App Portfolio</string>

  <string name="my_title">My NanoDegree Apps!</string>
  <string name="spotify_streamer">spotify streamer</string>
  <string name="scores_app">scores app</string>
  <string name="library_app">library app</string>
  <string name="build_it_bigger">build it bigger</string>
  <string name="xyz_reader">xyz reader</string>
  <string name="capstone">capstone: my own app</string>
  <string name="action_settings">Settings</string>
  <string name="toast_message">This button will launch</string>
</resources>
