<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/background"
    >

  <TextView
      android:id="@+id/title"
      android:text="@string/my_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="@dimen/text_size_large"
      android:textColor="@color/primary_text"
      android:padding="@dimen/spacing_minor"
      />

  <Button
      android:id="@+id/button1"
      android:layout_below="@+id/title"
      android:text="@string/spotify_streamer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/OtherButton"
      />
  <Button
      android:layout_below="@+id/button1"
      android:id="@+id/button2"
      android:text="@string/scores_app"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/OtherButton"
      />
  <Button
      android:layout_below="@+id/button2"
      android:id="@+id/button3"
      android:text="@string/library_app"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/OtherButton"
      />
  <Button
      android:layout_below="@id/button3"
      android:id="@+id/button4"
      android:text="@string/build_it_bigger"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/OtherButton"
      />
  <Button
      android:layout_below="@id/button4"
      android:id="@+id/button5"
      android:text="@string/xyz_reader"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/OtherButton"
      />
  <Button
      android:layout_below="@id/button5"
      android:id="@+id/button6"
      android:text="@string/capstone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/CapstoneButton"
      />

</RelativeLayout>
